@@ -1,3 +1,7 @@
+2008-11-15  Joel Brobecker  <brobecker@adacore.com>
+
+	* gdb.ada/int_deref.exp: New testcase.
+
 2008-11-14  Nick Roberts  <nickrob@snap.net.nz>
 
 	* gdb.mi/gdb2549.exp: New file.
